UUIDの持ち方微修正
