# app/interface/handler/dto.py
@@ -1,26 +1,22 @@
 # generated by fastapi-codegen:
 #   filename:  /home/docs/openapi/openapi.yml
-#   timestamp: 2023-05-20T17:46:21+00:00
+#   timestamp: 2023-05-20T18:01:43+00:00
 
 from __future__ import annotations
 
 from datetime import datetime
-from typing import Any, List, Optional
+from typing import List, Optional
 from uuid import UUID
 
 from pydantic import BaseModel, Field, conint, constr
 
 
-class FieldAffiliate(BaseModel):
-    __root__: Any
-
-
 class UUIDModel(BaseModel):
-    id: UUID = Field(..., description='ID')
+    __root__: UUID
 
 
-class UserID(BaseModel):
-    __root__: UUIDModel = Field(..., description='ユーザID')
+class OrderID(BaseModel):
+    id: UUIDModel = Field(..., description='注文ID')
 
 
 class Item(BaseModel):
@@ -44,7 +40,7 @@ class Item(BaseModel):
 
 
 class OrderItemID(BaseModel):
-    __root__: UUIDModel = Field(..., description='注文明細ID')
+    id: UUIDModel = Field(..., description='注文明細ID')
 
 
 class PurchaseRight(BaseModel):
@@ -209,8 +205,8 @@ class UpdatePurchaseRightRequest(BaseModel):
     item_id: Optional[UUID] = Field(None, description='商品ID')
 
 
-class OrderID(BaseModel):
-    __root__: UUIDModel = Field(..., description='注文ID')
+class UserID(BaseModel):
+    id: UUIDModel = Field(..., description='ユーザID')
 
 
 class Affiliate(BaseModel):
@@ -255,7 +251,7 @@ class User(BaseModel):
     )
     created_at: datetime = Field(..., description='作成日')
     updated_at: datetime = Field(..., description='更新日')
-    affiliate: Optional[FieldAffiliate] = None
+    affiliate: Optional[Affiliate] = None
     orders: Optional[List[OrderID]] = None
 
 
